# rust-tests-example

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-tag.yml  rust-ci.yml  rust-codecov.yml  rust-format.yml  rust-release-platform.yml
benches/: factorial_benchmark.rs
src/: lib.rs  main.rs
src/pkg_json/: npm_config_define.rs
