[package]
name = "rust_tests_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
human-panic = "1.1.4"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
serde_with = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
testdir = "0.9.1"
