[package]
name = "rust_tests_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
human-panic = "1.1.4"
serde = "1.0.193"
serde_derive = "1.0.152"
serde_json = "1.0.109"
serde_with = "3.11.0"

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
testdir = "0.9.1"
